--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
 
     <!-- Using DataBinding -->
     <data>
+        <variable name="handlers" type="com.may.myandroidsamples.MyHandlers"/>
         <variable name="user" type="com.may.myandroidsamples.viewmodel.User"/>
     </data>
 
@@ -17,10 +18,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{user.firstName}"
+                android:onClick="@{handlers::onClickFriend}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
+
 
     </android.support.constraint.ConstraintLayout>
 </layout>
